# InsureVN

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  example.md  pyproject.toml  requirements.txt  skills-lock.json
.agents/rules/: coding-style.md  common-agents.md  common-code-review.md  common-coding-style.md  common-development-workflow.md  common-git-workflow.md  common-security.md  common-testing.md  python-coding-style.md  python-testing.md  web-coding-style.md  web-design-quality.md  web-patterns.md  web-performance.md
.claude/skills/: workflow-research
CICD/: docker-compose.yml  langfuse-compose.yml
config/finetune/: health_insurance_extracted_test.jsonl
docs/: 2026-05-03-insurevn-multi-agent-platform-design.md  2026-05-04-quad-retrieval-rag-architecture.md  README.md  database_agent.md  json_data_schema_analysis_report.md  langfuse_integration.md  sqlite_database_schema_specification.md
docs/architecture/: 2026-05-03-multi-agent-platform-design.md  2026-05-04-quad-retrieval-rag-architecture.md  2026-05-09-benchmark-v2-generation-logic.md  2026-05-09-knowledge-graph-schema-discovery-pipeline.md
docs/blueprints/: dependency_matrix.md  phase_00_project_bootstrap_and_api_foundation.md  phase_01_evidence_foundation.md  phase_02_qdrant_document_retrieval.md  phase_04_supervisor_routing_graph.md  (+4 more)
scripts/: AGENTS.md  create_diagrams.py  debug_agent_trace.py  fetch_langfuse_trace.py  review_tool.py  run_search_agent.py  run_search_tool.py  train_gemma4_colab.ipynb
src/: AGENTS.md  main.py
tests/: AGENTS.md  conftest.py  test_regex.py  test_regex_crlf.py  test_regex_lenient.py
(+399 files in other folders)
