[project]
name = "InsureVN"
version = "0.1.0"
description = "Multi-agent AI system for the Vietnamese insurance industry"
authors = [
    { name = "quangnhvn34", email = "quangnhvn34@example.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.1",
    "deepagents>=0.5.6",
    "langchain>=0.2.6",
    "langgraph>=0.1.4",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-qdrant>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-neo4j>=0.4.0",
    "langchain-graph-retriever>=0.8.0",
    "langfuse>=4.5.1",
    "neo4j>=5.28.0",
    "qdrant-client>=1.9.1",
    "fastembed>=0.3.6",
    "sentence-transformers>=3.0.0",
    "underthesea>=6.8.0",
    "networkx>=3.3",
    "httpx>=0.27.0",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.9",
    "pip-tools>=7.4.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
force-exclude = true
extend-exclude = [
    ".agent",
    ".agents",
    ".claude",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PTH", "RET"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.pyright]
include = ["src"]
extraPaths = [".", "src"]
typeCheckingMode = "basic"
